# ee205-animal-farm

./: CMakeLists.txt  animal.cpp  animal.hpp  breed.cpp  breed.hpp  catDatabase.cpp  cats.cpp  cats.hpp  color.cpp  color.hpp  config.hpp  gender.cpp  gender.hpp  list.cpp  list.hpp  main.cpp  mammal.cpp  mammal.hpp  node.cpp  node.hpp  singlyLinkedList.cpp  singlyLinkedList.hpp  weight.cpp  weight.hpp
