cmake_minimum_required(VERSION 3.16)

project(ee205_lab_08d_animal_farm_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(ee205_lab_08d_animal_farm_2 main.cpp config.hpp cats.cpp cats.hpp weight.cpp weight.hpp gender.cpp gender.hpp node.cpp node.hpp animal.cpp animal.hpp mammal.cpp mammal.hpp color.cpp color.hpp breed.cpp breed.hpp list.cpp list.hpp singlyLinkedList.cpp singlyLinkedList.hpp)
